@@ -1,9 +1,14 @@
-FROM clojure:lein-2.8.1
+FROM clojure:lein as lein
 WORKDIR /aleph
 COPY src src
 COPY project.clj project.clj
 RUN lein uberjar
 
+FROM amazoncorretto:25
+
+WORKDIR /aleph
+COPY --from=lein /aleph/target/hello-aleph-standalone.jar app.jar
+
 EXPOSE 8080
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-jar", "target/hello-aleph-standalone.jar"]
+CMD ["java", "-server", "--enable-native-access=ALL-UNNAMED", "-XX:+UseParallelGC", "-XX:MaxRAMPercentage=70", "-Dclojure.compiler.direct-linking=true","-jar", "app.jar"]
